fixed relations between mvc classes