@@ -1,10 +1,5 @@
 package plato.View.AccountRelated;
 
-import plato.Model.AccountRelated.Gamer;
-import plato.Model.GameRelated.BattleSea.BattleSea;
-import plato.Model.GameRelated.GameLog;
-import plato.Model.GameRelated.Reversi.Reversi;
-
 import java.util.LinkedList;
 
 public class GamerView {
@@ -20,9 +15,9 @@ public class GamerView {
 		// TODO: 11/16/2020 AD
 	}
 
-	public static void displayAllUsernames (LinkedList<Gamer> gamers) {
+	public static void displayAllUsernames (LinkedList<String> gamersUsernames) {
 		System.out.println("Gamer usernames' list: ");
-		gamers.forEach(gamer -> System.out.printf("%t%s%n", gamer.getUsername()));
+		gamersUsernames.forEach(gamer -> System.out.printf("\t%s%n", gamer));
 	}
 
 	public static void displayFaveGamesForGamer (LinkedList<String> faveGames) {
@@ -36,42 +31,45 @@ public class GamerView {
 		System.out.println(list);
 	}
 
-	public static void displayFriendsUsernames (LinkedList<Gamer> friendsList) {
+	public static void displayFriendsUsernames (LinkedList<String> friendsUsernameList) {
 		System.out.println("Friends' usernames list: ");
-		friendsList.forEach(friend -> System.out.printf("\t%s%n", friend.getUsername()));
+		friendsUsernameList.forEach(friend -> System.out.printf("\t%s%n", friend));
 	}
 
-	public static void displayFriendPersonalInfo (Gamer frnd) {
-		System.out.printf("Username: %s%n", frnd.getUsername());
-		System.out.printf("First name: %s\tLastname: %s%n", frnd.getFirstName(), frnd.getLastName());
-		System.out.printf("Days since registration: %dd\t", frnd.getDaysSinceRegistration());
+	public static void displayFriendPersonalInfo (String frndUsername, String firstName, String frndLastName, int frndDaysSinceRegistration,
+												  LinkedList<String> frndFaveGames,
+												  int frndBattleseaPoints, int frndBattleseaWinCount, int frndBattleseaDrawCount, int frndBattleseaLossCount,
+												  int frndReversiPoints, int frndReversiWinCount, int frndReversiDrawCount, int frndReversiLossCount) {
+		System.out.printf("Username: %s%n", frndUsername);
+		System.out.printf("First name: %s\tLastname: %s%n", firstName, frndLastName);
+		System.out.printf("Days since registration: %dd\t", frndDaysSinceRegistration);
 
 		System.out.print("Favourite games: ");
 		String faveGameList = "";
-		switch (frnd.getFaveGames().size()) {
+		switch (frndFaveGames.size()) {
 			case 0 -> faveGameList = "-";
-			case 1 -> faveGameList = frnd.getFaveGames().getFirst();
-			case 2 -> faveGameList = "%s, %s".formatted(frnd.getFaveGames().get(0), frnd.getFaveGames().get(1));
+			case 1 -> faveGameList = frndFaveGames.getFirst();
+			case 2 -> faveGameList = "%s, %s".formatted(frndFaveGames.get(0), frndFaveGames.get(1));
 		}
 		System.out.println(faveGameList);
 
 		System.out.printf("Overall Stats:\tScore: %d  Wins: %d  Draws: %d  Losses: %d%n",
-				GameLog.getPoints(frnd, BattleSea.class.getSimpleName()) + GameLog.getPoints(frnd, Reversi.class.getSimpleName()),        // pts
-				GameLog.getWinCount(frnd, BattleSea.class.getSimpleName()) + GameLog.getWinCount(frnd, Reversi.class.getSimpleName()),    // wins
-				GameLog.getDrawCount(frnd, BattleSea.class.getSimpleName()) + GameLog.getDrawCount(frnd, Reversi.class.getSimpleName()),// draws
-				GameLog.getLossCount(frnd, BattleSea.class.getSimpleName()) + GameLog.getLossCount(frnd, Reversi.class.getSimpleName()) // losses
+				frndBattleseaPoints + frndReversiPoints,
+				frndBattleseaWinCount + frndReversiWinCount,
+				frndBattleseaDrawCount + frndReversiDrawCount,
+				frndBattleseaLossCount + frndReversiLossCount
 		);
 		System.out.printf("\t> BattleSea Stats:\tScore: %d  Wins: %d  Draws: %d  Losses: %d%n",
-				GameLog.getPoints(frnd, BattleSea.class.getSimpleName()),    // pts
-				GameLog.getWinCount(frnd, BattleSea.class.getSimpleName()),    // wins
-				GameLog.getDrawCount(frnd, BattleSea.class.getSimpleName()),// draws
-				GameLog.getLossCount(frnd, BattleSea.class.getSimpleName()) // losses
+				frndBattleseaPoints,
+				frndBattleseaWinCount,
+				frndBattleseaDrawCount,
+				frndBattleseaLossCount
 		);
 		System.out.printf("\t> Reversi Stats:\tScore: %d  Wins: %d  Draws: %d  Losses: %d%n",
-				GameLog.getPoints(frnd, Reversi.class.getSimpleName()),    // pts
-				GameLog.getWinCount(frnd, Reversi.class.getSimpleName()),    // wins
-				GameLog.getDrawCount(frnd, Reversi.class.getSimpleName()),    // draws
-				GameLog.getLossCount(frnd, Reversi.class.getSimpleName())    // losses
+				frndReversiPoints,
+				frndReversiWinCount,
+				frndReversiDrawCount,
+				frndReversiLossCount
 		);
 	}
 }
